--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -118,10 +118,10 @@
 <p class="topLevelItemTitle">Contents</p>
 <p class="itemText">Contents</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Introduction:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">[Introduction](#introduction)</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">I. [The Manuscripts of the Kĕbra Nagast, etc.](#i-the-manuscripts-of-the-kebra-nagast-and-their-arrival-in-europe-the-labours-of-bruce-dillmann-praetorius-wright-zotenberg-and-bezold-king-johns-letter-to-lord-granville-date-of-compilation-of-the-kebra-nagast-the-ethiopian-work-based-on-coptic-and-arabic-sources-etc) <span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">II. [Translation of the Arabic Version](#ii-english-translation-of-the-arabic-text-describing-how-the-kingdom-of-david-was-transferred-from-jerusalem-to-et...</p>
+<p class="itemText"><p class="p1"><span class="s1">II. [Translation of the Arabic Version](#ii-english-translation-of-the-arabic-text-describing-how-the-kingdom-of-david-was-transferred-from...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Introduction</p>
@@ -304,7 +304,7 @@
 <p class="itemText">And when the young man arrived in his mother’s country he rejoiced there in the honor which he received, and in the gifts that were made to him. And when the people saw him they thought him to be the perfect likeness of Solomon the King. And they made obeisance to him, and they said to him, “Hail, the royal father lives!” And they brought to him gifts and offerings, fatted cattle and food, as to their king. And the people of the whole country of Gâzâ, as far as the border of Judah, were stirred ...</p>
 </li>
 <li>
-<p class="itemTitle">How King Solomon sent to his son the commander of his army</p>
+<p class="itemTitle">How King Solomon sent the commander of his army to his son</p>
 <p class="itemText">And Solomon the King sent the commander of his army, on whose hand he was accustomed to lean, with gifts and meat and drink to entertain that traveller. And the commander set out with a great number of wagons, and he came to Menyelek, and embraced him, and gave him everything that Solomon the King had sent to him. And he said to him, “Go quickly and come with me, for the heart of the King is burnt up as with fire with the love of you. Perhaps he will find out for himself whether you are his own ...</p>
 </li>
 <li>
@@ -474,7 +474,7 @@
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Persia</p>
-<p class="itemText">And the King of Persia is likewise of the descendant of Shem, and we will inform you concerning the matters that relate to him. Judah sired two sons, and he brought in Tamar for his eldest son, and he died. And Judah sent his younger son to her that he might raise up a child to his brother by his brother’s wife. And he did that which God hated, and he did not wish to raise up a child to his brother as his father Judah had commanded him. Now when he lay with Tamar he made his sperm go into the gr...</p>
+<p class="itemText">And the King of Persia is likewise of the descendant of Shem, and we will inform you concerning the matters that relate to him. Judah fathered two sons, and he brought in Tamar for his eldest son, and he died. And Judah sent his younger son to her that he might raise up a child to his brother by his brother’s wife. And he did that which God hated, and he did not wish to raise up a child to his brother as his father Judah had commanded him. Now when he lay with Tamar he made his sperm go into the...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Moab</p>
@@ -495,7 +495,7 @@
 </li>
 <li>
 <p class="itemTitle">Concerning Abraham going down into Egypt</p>
-<p class="itemText">And we could also inform you that when God had given unto Abraham glory and riches, he lacked a son. And Sârâh and Abraham talked together on their bed, and he said unto her, “Thou art barren,” and she said unto him, “It is not I who am barren but thyself”; and they continued to discuss the matter and to dispute together about it. And there came a famine in the land of Canaan, and Abraham heard that there was some food in the land of Egypt, the country of Pharaoh. And when he had spent all his p...</p>
+<p class="itemText">And we could also inform you that when God had given Abraham glory and riches, he lacked a son. And Sarah and Abraham talked together on their bed, and he said unto her, “You are barren,” and she said unto him, “It is not I who am barren but you;” and they continued to discuss the matter and to argue together about it. And there came a famine in the land of Canaan, and Abraham heard that there was some food in the land of Egypt, the country of Pharaoh. And when he had spent all his possessions i...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of the Ishmaelites</p>
