Replaced thither and Sheol

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -450,7 +450,7 @@
 </li>
 <li>
 <p class="itemTitle">Concerning Mary, the daughter of David</p>
-<p class="itemText">And from this it is evident that Mary was the daughter of David, and that Joseph was the son of David. Therefore Mary was engaged to Joseph her relative, as it is said in the Gospel, “Oh Joseph, son of David, fear not to wed Mary your engaged, for that which is to be born of her is of the Holy Spirit, the Word of God.” And there was born of her God, the Word, Light of Light, God of God, Son of the Father, Who came and delivered His creation; from the hand of Sheôl, and from Satan, and from death...</p>
+<p class="itemText">And from this it is evident that Mary was the daughter of David, and that Joseph was the son of David. Therefore Mary was engaged to Joseph her relative, as it is said in the Gospel, “Oh Joseph, son of David, fear not to wed Mary your engaged, for that which is to be born of her is of the Holy Spirit, the Word of God.” And there was born of her God, the Word, Light of Light, God of God, Son of the Father, Who came and delivered His creation; from the hand of the netherworld, and from Satan, and ...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Byzantium</p>
