--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -661,7 +661,8 @@
 <ul>
 <li>
 <p class="itemTitle">A List of the Passages from the Old and New Testaments, Quoted or Referred to in the Kebra Nagast</p>
-<p class="itemText">Genesis i, 1, [^fn116], [^fn152]; i, 26, [^fn30]; ii, 17, [^fn146]; iii, 16, [^fn63]; v, 9, [^fn39]; vi, 2–4, [^fn149]; vi, 14, [^fn150]; viii, 21, [^fn36]; ix, 4, [^fn36]; ix, 25–27, [^fn35]; x, 6, [^fn38]; xii ff., 11, [^fn109]; xiii, 14–17, [^fn41]; xiv, —, [^fn181]; xv, 1, [^fn40]; xviii, 1, [^fn173]; xxii, 13, [^fn97], [^fn174]; xxii, 17, [^fn53]; xxx, 37, [^fn175]; xxxv, 22, [^fn42]; xlvii, 29, [^fn304]; xlvii, 31, [^fn176]; xlix, 4, [^fn42]; xlix, 8–12, [^fn246], [^fn247], [^fn248]; l, 25...</p>
+<p class="itemText">Genesis 1:1, [^fn116], [^fn152]; 1:26, [^fn30]; 2:17, [^fn146]; 3:16, [^fn63]; 5:9, [^fn39]; 6:2–4, [^fn149]; 6:14, [^fn150]; 8:21, [^fn36]; 9:4, [^fn36]; 9:25–27, [^fn35]; 10:6, [^fn38]; 12:11, [^fn109]; 13:14–17, [^fn41]; 14:—, [^fn181]; 15:1, [^fn40]; 18:1, [^fn173]; 22:13, [^fn97], [^fn174]; 22:17, [^fn53]; 30:37, [^fn175]; 35:22, [^fn42]; 47:29, [^fn304]; 47:31, [^fn176]; 49:4, [^fn42]; 49:8–12, [^fn246], [^fn247], [^fn248]; 50:25, [^fn305].</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Exodus 3:2, [^fn124]; 7:10, [^fn140]; 7:19, [^fn1...</p>
 </li>
 <li>
 <p class="itemTitle">Known history and variations of the Kəbrä Nägäśt texts</p>
