Update Appendix list of Biblical citations

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -661,8 +661,36 @@
 <ul>
 <li>
 <p class="itemTitle">A List of the Passages from the Old and New Testaments, Quoted or Referred to in the Kebra Nagast</p>
-<p class="itemText">Genesis 1:1, [^fn116], [^fn152]; 1:26, [^fn30]; 2:17, [^fn146]; 3:16, [^fn63]; 5:9, [^fn39]; 6:2-4, [^fn149]; 6:14, [^fn150]; 8:21, [^fn36]; 9:4, [^fn36]; 9:25-27, [^fn35]; 10:6, [^fn38]; 12:11, [^fn109]; 13:14-17, [^fn41]; 14, [^fn181]; 15:1, [^fn40]; 18:1, [^fn173]; 22:13, [^fn97], [^fn174]; 22:17, [^fn53]; 30:37, [^fn175]; 35:22, [^fn42]; 47:29, [^fn304]; 47:31, [^fn176]; 49:4, [^fn42]; 49:8-12, [^fn246], [^fn247], [^fn248]; 50:25, [^fn305].</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Exodus 3:2, [^fn124]; 7:10, [^fn140]; 7:19, [^fn141...</p>
+<p class="itemText">Genesis<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 1:1 [^fn116], [^fn152]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 1:26 [^fn30]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 2:17 [^fn146]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 3:16 [^fn63]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 5:9 [^fn39]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 6:2-4 [^fn149]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 6:14 [^fn150]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 8:21 [^fn36]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 9:4 [^fn36]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 9:25-27 [^fn35]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 10:6 [^fn38]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 12:11 [^fn109]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 13:14-17 [^fn41]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 14 [^fn181]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 15:1 [^fn40]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 18:1 [^fn173]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 22:13 [^fn97], [^fn174]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 22:17 [^fn53]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 30:37 [^fn175]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 35:22 [^fn42]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 47:29 [^fn304]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 47:31 [^fn176]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 49:4 [^fn42]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 49:8-12 [^fn246], [^fn247], [^fn248]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 50:25 [^fn305]</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Exodus<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• 3:2 [^fn124]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">...</p>
 </li>
 <li>
 <p class="itemTitle">Known history and variations of the Kəbrä Nägäśt texts</p>
